Added first iteration of glasses identifier model

--- a/cameraInput.ipynb
+++ b/cameraInput.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image saved as capture_20241030_171145.jpg\n",
-      "Image saved as capture_20241030_171155.jpg\n"
+      "Image saved as capturedImages/capture_20241030_184804.jpg\n",
+      "Capturing next image... in 3\n",
+      "Capturing next image... in 2\n",
+      "Capturing next image... in 1\n",
+      "Image saved as capturedImages/capture_20241030_184814.jpg\n"
      ]
     },
     {
@@ -31,7 +34,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage saved as \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;66;03m# Wait for 10 seconds\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;66;03m# Release the camera when done\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     camera\u001b[38;5;241m.\u001b[39mrelease()\n",
+      "Cell \u001b[0;32mIn[7], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage saved as \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Wait for 10 seconds\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCapturing next image... in 3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -52,7 +55,7 @@
     "        \n",
     "        # Get current time to create unique filenames\n",
     "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "        filename = f\"capture_{timestamp}.jpg\"\n",
+    "        filename = f\"capturedImages/capture_{timestamp}.jpg\"\n",
     "        \n",
     "        # Save the captured image\n",
     "        cv2.imwrite(filename, frame)\n",
@@ -60,7 +63,13 @@
     "        print(f\"Image saved as {filename}\")\n",
     "        \n",
     "        # Wait for 10 seconds\n",
-    "        time.sleep(10)\n",
+    "        time.sleep(7)\n",
+    "        print(\"Capturing next image... in 3\")\n",
+    "        time.sleep(1)\n",
+    "        print(\"Capturing next image... in 2\")\n",
+    "        time.sleep(1)\n",
+    "        print(\"Capturing next image... in 1\")\n",
+    "        time.sleep(1)\n",
     "\n",
     "finally:\n",
     "    # Release the camera when done\n",
