Model trained and improved results, integration with camera module done

--- a/cameraInput.ipynb
+++ b/cameraInput.ipynb
@@ -2,71 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import time\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image saved as capturedImages/capture_20241030_185638.jpg\n",
-      "Capturing next image... in 3\n",
-      "Capturing next image... in 2\n",
-      "Capturing next image... in 1\n",
-      "Image saved as capturedImages/capture_20241030_185648.jpg\n",
-      "Capturing next image... in 3\n",
-      "Capturing next image... in 2\n",
-      "Capturing next image... in 1\n",
-      "Image saved as capturedImages/capture_20241030_185658.jpg\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage saved as \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Wait for 10 seconds\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCapturing next image... in 3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Initialize the camera\n",
-    "camera = cv2.VideoCapture(1)  # 0 is the default camera\n",
+    "def predict_image(image_path, model_path='saved_models/glasses_detector.keras'):\n",
+    "    \"\"\"\n",
+    "    Función para predecir si en la imagen la persona está usando gafas o no.\n",
+    "    \"\"\"\n",
+    "    # Cargamos el modelo\n",
+    "    model = load_model(model_path)\n",
+    "    \n",
+    "    # Cargamos la imagen\n",
+    "    img = image.load_img(image_path, target_size=(512, 512))\n",
+    "    # Convertimos la imagen a un array\n",
+    "    img_array = image.img_to_array(img)\n",
+    "    # Normalizamos la imagen (dividimos por 255)\n",
+    "    img_array = img_array / 255.0\n",
+    "    # Añadimos una dimensión extra\n",
+    "    img_array = np.expand_dims(img_array, axis=0)\n",
+    "    \n",
+    "    # Realizamos la predicción\n",
+    "    prediction = model.predict(img_array, verbose=0)\n",
     "\n",
-    "# Set up a loop to take a picture every 10 seconds\n",
+    "    # Mostramos el resultado\n",
+    "    if prediction[0] < 0.5:\n",
+    "        print(\"Prediction: Glasses\")\n",
+    "    else:\n",
+    "        print(\"Prediction: No Glasses\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializamos objecto camara\n",
+    "camera = cv2.VideoCapture(1)  # 0 es para la camara integrada, 1 para la camara externa\n",
+    "\n",
+    "# Se va a ejecutar la captura de imagenes en rondas de 10 segundos\n",
     "try:\n",
     "    while True:\n",
-    "        # Capture the frame\n",
+    "        # Capturamos imagen\n",
     "        ret, frame = camera.read()\n",
     "        \n",
+    "        # Si no se pudo capturar la imagen, terminamos el programa\n",
     "        if not ret:\n",
     "            print(\"Failed to capture image.\")\n",
     "            break\n",
     "        \n",
-    "        # Get current time to create unique filenames\n",
+    "        # Generamos un nombre de archivo para la imagen capturada\n",
     "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "        filename = f\"capturedImages/capture_{timestamp}.jpg\"\n",
     "        \n",
-    "        # Save the captured image\n",
+    "        # Guardamos la imagen capturada\n",
     "        cv2.imwrite(filename, frame)\n",
     "        \n",
-    "        print(f\"Image saved as {filename}\")\n",
+    "        # Predecimos si la persona en la imagen esta usando lentes o no\n",
+    "        predict_image(filename)\n",
     "        \n",
-    "        # Wait for 10 seconds\n",
+    "        # Esperamos 10 segundos antes de capturar la siguiente imagen\n",
     "        time.sleep(7)\n",
     "        print(\"Capturing next image... in 3\")\n",
     "        time.sleep(1)\n",
@@ -76,7 +88,7 @@
     "        time.sleep(1)\n",
     "\n",
     "finally:\n",
-    "    # Release the camera when done\n",
+    "    # Liberamos la camara y cerramos todas las ventanas\n",
     "    camera.release()\n",
     "    cv2.destroyAllWindows()"
    ]
