comments in the code

--- a/cameraInput.ipynb
+++ b/cameraInput.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import time\n",
-    "from datetime import datetime\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.preprocessing import image\n",
-    "import numpy as np"
+    "import cv2 # libreria de OpenCV para el manejo de imagenes\n",
+    "import time # libreria para el manejo de tiempo\n",
+    "from datetime import datetime # libreria para el manejo de fechas\n",
+    " \n",
+    "import tensorflow as tf # libreria de tensorflow para el manejo de redes neuronales\n",
+    "from tensorflow.keras.models import load_model # libreria para cargar un modelo de red neuronal\n",
+    "from tensorflow.keras.preprocessing import image # libreria para el preprocesamiento de imagenes\n",
+    "import numpy as np # libreria para el manejo de arreglos"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_image(image_path, model_path='saved_models/glasses_detector.keras'):\n",
+    "def predict_image(image_path, model_path='saved_models/glasses_detector.keras'): # ruta de la imagen y ruta del modelo\n",
     "    \"\"\"\n",
     "    Función para predecir si en la imagen la persona está usando gafas o no.\n",
     "    \"\"\"\n",
@@ -69,8 +69,8 @@
     "            break\n",
     "        \n",
     "        # Generamos un nombre de archivo para la imagen capturada\n",
-    "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "        filename = f\"capturedImages/capture_{timestamp}.jpg\"\n",
+    "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\") # Formato de fecha y hora\n",
+    "        filename = f\"capturedImages/capture_{timestamp}.jpg\" # Nombre del archivo de la imagen capturada\n",
     "        \n",
     "        # Guardamos la imagen capturada\n",
     "        cv2.imwrite(filename, frame)\n",
@@ -80,17 +80,17 @@
     "        \n",
     "        # Esperamos 10 segundos antes de capturar la siguiente imagen\n",
     "        time.sleep(7)\n",
-    "        print(\"Capturing next image... in 3\")\n",
+    "        print(\"Capturing next image... in 3\") # Mensaje de espera para la siguiente captura\n",
     "        time.sleep(1)\n",
-    "        print(\"Capturing next image... in 2\")\n",
+    "        print(\"Capturing next image... in 2\") # Mensaje de espera para la siguiente captura\n",
     "        time.sleep(1)\n",
-    "        print(\"Capturing next image... in 1\")\n",
+    "        print(\"Capturing next image... in 1\") # Mensaje de espera para la siguiente captura\n",
     "        time.sleep(1)\n",
     "\n",
     "finally:\n",
     "    # Liberamos la camara y cerramos todas las ventanas\n",
-    "    camera.release()\n",
-    "    cv2.destroyAllWindows()"
+    "    camera.release() # Liberamos la camara\n",
+    "    cv2.destroyAllWindows() # Cerramos todas las ventanas"
    ]
   }
  ],
