--- a/model.ipynb
+++ b/model.ipynb
@@ -21,13 +21,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the global policy to mixed precision with float16\n",
     "mixed_precision.set_global_policy('mixed_float16')\n",
     "\n",
+    "# List all physical devices available\n",
     "devices = tf.config.list_physical_devices()\n",
     "print(\"\\nDevices: \", devices)\n",
     "\n",
+    "# List all available GPU devices\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
     "if gpus:\n",
+    "    # If GPUs are available, set memory growth to True for each GPU\n",
     "    for gpu in gpus:\n",
     "        tf.config.experimental.set_memory_growth(gpu, True)"
    ]
