--- a/model.ipynb
+++ b/model.ipynb
@@ -103,39 +103,67 @@
    "outputs": [],
    "source": [
     "def make_classifier_model():\n",
+    "    # Initialize a sequential model\n",
     "    model = tf.keras.Sequential()\n",
     "    \n",
+    "    # Add first convolutional layer with 64 filters, 3x3 kernel, same padding, and input shape\n",
     "    model.add(layers.Conv2D(64, (3, 3), padding='same', input_shape=(512, 512, 3)))\n",
+    "    # Add batch normalization\n",
     "    model.add(layers.BatchNormalization())\n",
+    "    # Add LeakyReLU activation function with alpha 0.1\n",
     "    model.add(layers.LeakyReLU(alpha=0.1))\n",
+    "    # Add max pooling layer with 2x2 pool size\n",
     "    model.add(layers.MaxPooling2D((2, 2)))\n",
+    "    # Add dropout layer with 30% dropout rate\n",
     "    model.add(layers.Dropout(0.3))\n",
     "    \n",
+    "    # Add second convolutional layer with 128 filters, 3x3 kernel, and same padding\n",
     "    model.add(layers.Conv2D(128, (3, 3), padding='same'))\n",
+    "    # Add batch normalization\n",
     "    model.add(layers.BatchNormalization())\n",
+    "    # Add LeakyReLU activation function with alpha 0.1\n",
     "    model.add(layers.LeakyReLU(alpha=0.1))\n",
+    "    # Add max pooling layer with 2x2 pool size\n",
     "    model.add(layers.MaxPooling2D((2, 2)))\n",
+    "    # Add dropout layer with 30% dropout rate\n",
     "    model.add(layers.Dropout(0.3))\n",
     "    \n",
+    "    # Add third convolutional layer with 256 filters, 3x3 kernel, and same padding\n",
     "    model.add(layers.Conv2D(256, (3, 3), padding='same'))\n",
+    "    # Add batch normalization\n",
     "    model.add(layers.BatchNormalization())\n",
+    "    # Add LeakyReLU activation function with alpha 0.1\n",
     "    model.add(layers.LeakyReLU(alpha=0.1))\n",
+    "    # Add max pooling layer with 2x2 pool size\n",
     "    model.add(layers.MaxPooling2D((2, 2)))\n",
+    "    # Add dropout layer with 30% dropout rate\n",
     "    model.add(layers.Dropout(0.3))\n",
     "    \n",
+    "    # Add fourth convolutional layer with 512 filters, 3x3 kernel, and same padding\n",
     "    model.add(layers.Conv2D(512, (3, 3), padding='same'))\n",
+    "    # Add batch normalization\n",
     "    model.add(layers.BatchNormalization())\n",
+    "    # Add LeakyReLU activation function with alpha 0.1\n",
     "    model.add(layers.LeakyReLU(alpha=0.1))\n",
+    "    # Add max pooling layer with 2x2 pool size\n",
     "    model.add(layers.MaxPooling2D((2, 2)))\n",
+    "    # Add dropout layer with 30% dropout rate\n",
     "    model.add(layers.Dropout(0.3))\n",
     "    \n",
+    "    # Flatten the output from the convolutional layers\n",
     "    model.add(layers.Flatten())\n",
+    "    # Add a dense (fully connected) layer with 256 units\n",
     "    model.add(layers.Dense(256))\n",
+    "    # Add batch normalization\n",
     "    model.add(layers.BatchNormalization())\n",
+    "    # Add LeakyReLU activation function with alpha 0.1\n",
     "    model.add(layers.LeakyReLU(alpha=0.1))\n",
+    "    # Add dropout layer with 50% dropout rate\n",
     "    model.add(layers.Dropout(0.5))\n",
+    "    # Add output dense layer with 1 unit and sigmoid activation function\n",
     "    model.add(layers.Dense(1, activation='sigmoid', dtype='float32'))\n",
     "    \n",
+    "    # Return the constructed model\n",
     "    return model"
    ]
   },
@@ -170,15 +198,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a list of callbacks to be used during training\n",
     "callbacks = [\n",
+    "    # Reduce learning rate when a metric has stopped improving\n",
     "    tf.keras.callbacks.ReduceLROnPlateau(\n",
-    "        monitor='val_loss',\n",
-    "        factor=0.2,\n",
-    "        patience=2\n",
+    "        monitor='val_loss',  # Metric to be monitored\n",
+    "        factor=0.2,          # Factor by which the learning rate will be reduced\n",
+    "        patience=2           # Number of epochs with no improvement after which learning rate will be reduced\n",
     "    ),\n",
+    "    # Save the model after every epoch\n",
     "    tf.keras.callbacks.ModelCheckpoint(\n",
-    "        'models/checkpoint2.keras',\n",
-    "        save_best_only=True\n",
+    "        'models/checkpoint2.keras',  # Path to save the model file\n",
+    "        save_best_only=True          # Only save the model if the monitored metric improves\n",
     "    )\n",
     "]"
    ]
