--- a/model.ipynb
+++ b/model.ipynb
@@ -235,10 +235,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loss, test_accuracy = model.evaluate(test_generator, steps=test_generator.samples // test_generator.batch_size)\n",
+    "# Check if the 'saved_models' directory exists, if not, create it\n",
+    "if not os.path.exists('saved_models'):\n",
+    "    os.makedirs('saved_models')\n",
     "\n",
-    "print(f\"Test Accuracy: {test_accuracy * 100:.2f}%\")\n",
-    "print(f\"Test Loss: {test_loss:.4f}\")"
+    "# Save the model to the 'saved_models' directory\n",
+    "model.save('saved_models/glasses_detector')\n",
+    "\n",
+    "# Check if the variable 'history' exists in the local or global scope\n",
+    "if 'history' in locals() or 'history' in globals():\n",
+    "    # Get the training history dictionary\n",
+    "    history_dict = history.history\n",
+    "    # Save the training history to a JSON file in the 'saved_models' directory\n",
+    "    with open('saved_models/training_history.json', 'w') as f:\n",
+    "        json.dump(history_dict, f)"
    ]
   },
   {
